--- a/app/src/main/res/layout/activity_captcha.xml
+++ b/app/src/main/res/layout/activity_captcha.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,16 +20,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TableLayout
-        android:id="@+id/tableLayout"
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="300dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/btnTakeImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical">
 
         <TableRow
             android:layout_width="match_parent"
@@ -37,20 +38,20 @@
 
             <ImageButton
                 android:id="@+id/btn1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:adjustViewBounds="true"
+                android:adjustViewBounds="false"
                 android:scaleType="fitCenter"
                 android:tag="1"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <ImageButton
                 android:id="@+id/btn2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:adjustViewBounds="true"
+                android:adjustViewBounds="false"
                 android:scaleType="fitCenter"
                 android:tag="2"
                 tools:srcCompat="@tools:sample/avatars" />
@@ -64,47 +65,37 @@
 
             <ImageButton
                 android:id="@+id/btn3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:adjustViewBounds="true"
+                android:adjustViewBounds="false"
                 android:scaleType="fitCenter"
                 android:tag="3"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <ImageButton
                 android:id="@+id/btn4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:adjustViewBounds="true"
+                android:adjustViewBounds="false"
                 android:scaleType="fitCenter"
                 android:tag="4"
                 tools:srcCompat="@tools:sample/avatars" />
 
         </TableRow>
-
-    </TableLayout>
+    </LinearLayout>
 
     <Button
-        android:id="@+id/btnGetImage"
+        android:id="@+id/btnTakeImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="get image"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.631" />
-
-    <Button
-        android:id="@+id/btnGoToSimilar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="go to similar"
-        app:layout_constraintStart_toStartOf="@+id/btnGetImage"
-        app:layout_constraintTop_toBottomOf="@+id/btnGetImage" />
+        app:layout_constraintVertical_bias="0.90" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
